# python-project-lvl2

./: .Makefile.swp  .filepath2.json.swp  .gitignore  Makefile  README.md  poetry  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  test_flake8.yml  testflake8.yml  tests
gendiff/: 123.py  __init__.py  engine.py  gendiff.py  gendiff_args.py  generate_diff.py  parser.py
gendiff/scripts/: gendiff.py  gendiff_script.py
gendiff/style_pack/: custom_style.py  plain_style.py
tests/: test_gendiff.py
tests/fixtures/: answer2.json  answer2.txt  file1.yaml  file2.yaml  gen_files.py
