[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["MukhammedDinaev <dinaev.m@mail.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
